<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:contentDescription="@string/nav_header_desc"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_weight="0.9"
        app:lottie_rawRes="@raw/user_icon_animation">

    </com.airbnb.lottie.LottieAnimationView>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/drawer_textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_weight="0.05"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/drawer_textview_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/nav_header_subtitle" />
</LinearLayout>